--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ rvm:
   - 2.3.7
   - 2.4.4
   - 2.5.1
+  - ruby-head
 before_install:
   - gem update --system
   - gem update --remote bundler
+allow_failures:
+  - rvm: ruby-head
