--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ rvm:
   - 2.5.3
   - ruby-head
 before_install:
-  - gem update --system
+  - travis_retry gem update --system || travis_retry gem update --system 2.7.8
   - gem update --remote bundler
 
 gemfile:
